# mwifiex

./: SCR.txt
mxm_wifiex/wlan_src/: BUILD.bazel  Makefile  README  README_MLAN  SCR.txt
mxm_wifiex/wlan_src/mapp/mlan2040coex/: mlan2040coex.c  mlan2040coex.h  mlan2040misc.c  mlan2040misc.h
mxm_wifiex/wlan_src/mapp/mlanconfig/: Android.mk  Makefile  (+6 more)
mxm_wifiex/wlan_src/mlan/: mlan.h  mlan_11ac.c  mlan_11ac.h  mlan_11ax.c  mlan_11ax.h  mlan_11d.c  mlan_11h.c  mlan_11h.h  mlan_11n.c  mlan_11n.h  mlan_11n_aggr.c  mlan_11n_aggr.h  mlan_11n_rxreorder.c  mlan_11n_rxreorder.h  mlan_cfp.c  mlan_cmdevt.c  mlan_decl.h  mlan_event_ids.h  mlan_fw.h  mlan_hostcmd_ids.h  mlan_ieee.h  mlan_init.c  mlan_init.h  mlan_ioctl.h  mlan_join.c  mlan_join.h  mlan_main.h  mlan_meas.c  mlan_meas.h  mlan_misc.c  mlan_module.c  mlan_pcie.c  mlan_pcie.h  mlan_scan.c  mlan_sdio.c  mlan_sdio.h  mlan_shim.c  mlan_sta_cmd.c  mlan_sta_cmdresp.c  mlan_sta_event.c  (+12 more)
mxm_wifiex/wlan_src/mlinux/: mlan.h  mlan_decl.h  mlan_ieee.h  mlan_ioctl.h  moal_cfg80211.c  moal_cfg80211.h  moal_cfg80211_util.c  moal_cfg80211_util.h  moal_debug.c  moal_eth_ioctl.c  moal_eth_ioctl.h  moal_init.c  moal_ioctl.c  moal_main.c  moal_main.h  moal_pcie.c  moal_pcie.h  moal_priv.c  moal_priv.h  moal_proc.c  moal_sdio.h  moal_sdio_mmc.c  moal_shim.c  moal_shim.h  moal_sta_cfg80211.c  moal_sta_cfg80211.h  moal_uap.c  moal_uap.h  moal_uap_cfg80211.c  moal_uap_cfg80211.h  moal_uap_priv.c  moal_uap_priv.h  moal_uap_wext.c  moal_usb.c  moal_usb.h  moal_wext.c  moal_wext.h
mxm_wifiex/wlan_src/script/: load  unload  usbconfig
(+173 files in other folders)
